--- a/public/assest/css/course.css
+++ b/public/assest/css/course.css
@@ -83,11 +83,11 @@ body {
     right: 50px;
     width: 60px;
     height: 60px;
-   
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    z-index: 1000;
 }
 
 #chatbot-icon {
@@ -116,6 +116,7 @@ body {
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    z-index: 1000;
 }
 
 #chatbot-header {
