--- a/public/assest/css/home.css
+++ b/public/assest/css/home.css
@@ -15,11 +15,12 @@
     right: 50px;
     width: 60px;
     height: 60px;
-   
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    z-index: 1000; 
+
 }
 
 #chatbot-icon {
@@ -48,6 +49,7 @@
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    z-index: 1000;
 }
 
 #chatbot-header {
@@ -342,23 +344,19 @@ span {
     height: 600px;
     margin: 20px auto;
     text-align: center;
-   
-    
-}.divider {
+    z-index: 1;  
+}
+.divider {
     width: 100%;
     border: 10px solid rgb(255, 249, 193);
     border-radius: 5px;
     opacity: 0.5;
     margin-bottom: 70px;
-    
 }
-
-  
 .features-content {
  width: 100%;
     padding: 80px 10%;
     color: #f4f4f4; /* Light text color */
-
     display: flex;
     flex-wrap: wrap;
     gap: 30px; /* Increased gap between cards */
@@ -373,10 +371,8 @@ span {
     box-shadow: 0 22px 20px rgba(0, 0, 0, 0.2); /* Slightly larger shadow for better effect */
     text-align: center; /* Centering text inside cards */
 }
-
 .feature-card h3 {
     text-shadow: 0 0 25px #FFF9C1;
-
     color: #FFF9C1; /* EduSpace accent color */
     font-size: 22px;
     margin-bottom: 10px;
@@ -388,7 +384,6 @@ span {
     line-height: 1.7; /* Increased line height for a more open and professional feel */
     font-weight: 400; 
 }
-
 /* Video Section Styles *//* Video Section Styles */
 .video-text-section {
     display: flex;
@@ -401,14 +396,12 @@ span {
     border-radius: 10px; /* Rounded corners */
     margin: 2rem auto; /* Center the section and add margin */
 }
-
 .video-container {
     width: 60%; /* Adjust width for video */
     aspect-ratio: 16 / 9; /* Maintain aspect ratio of the video */
     border-radius: 10px; /* Rounded corners for video container */
     overflow: hidden; /* Hide overflow */
     box-shadow: 0 22px 30px rgba(0, 0, 0, 0.2); /* Slightly larger shadow for better effect */
-
 }
 
 .video-container iframe {
@@ -511,7 +504,6 @@ span {
     font-size: 1.3em;
     opacity: 0.7;
     transition: 0.5s;
-
 }
 .footerNav ul li a:hover{
     opacity: 1;
