--- a/public/assest/css/video.css
+++ b/public/assest/css/video.css
@@ -171,11 +171,12 @@ video {
     right: 50px;
     width: 60px;
     height: 60px;
-   
+
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    z-index: 1000;
 }
 
 #chatbot-icon {
@@ -204,6 +205,7 @@ video {
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    z-index: 1000;
 }
 
 #chatbot-header {
