[finaly] last edit

--- a/public/assest/css/video.css
+++ b/public/assest/css/video.css
@@ -171,12 +171,12 @@ video {
     right: 50px;
     width: 60px;
     height: 60px;
-
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 1000; 
+
 }
 
 #chatbot-icon {
@@ -200,8 +200,9 @@ video {
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    background-color: #000000;
+    background-color: #394167;
     position: fixed;
+
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -209,8 +210,8 @@ video {
 }
 
 #chatbot-header {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -236,7 +237,7 @@ video {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #ffffff;
 }
 
 #chatbot-input {
@@ -253,8 +254,8 @@ video {
 }
 
 #chatbot-send {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     border: none;
     padding: 8px 12px;
     margin-left: 10px;
@@ -272,6 +273,8 @@ video {
 .chat-message:nth-child(even) {
     /* background-color: #f1f1f1; */
 }
+
+
 /* .star {
     position: absolute;
     background-color: white;
