--- a/public/assest/css/course.css
+++ b/public/assest/css/course.css
@@ -87,33 +87,6 @@ body {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    z-index: 1000;
-}
-
-#chatbot-icon {
-    width: 160px;
-    height: 160px;
-}
-#chatbot-label {
-    position: absolute;
-    bottom: 5px; /* Adjust position as needed */
-    right: 80px; /* Adjust position as needed */
-    font-size: 12px; /* Adjust font size as needed */
-    color: #FFF9C1; /* Adjust color as needed */
-
-  }
-
- /* Chatbot container hidden initially */
- #chatbot-launcher {
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
     z-index: 1000; 
 
 }
@@ -139,8 +112,9 @@ body {
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    background-color: #000000;
+    background-color: #394167;
     position: fixed;
+
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -148,8 +122,8 @@ body {
 }
 
 #chatbot-header {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -175,7 +149,7 @@ body {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #ffffff;
 }
 
 #chatbot-input {
@@ -192,8 +166,8 @@ body {
 }
 
 #chatbot-send {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     border: none;
     padding: 8px 12px;
     margin-left: 10px;
@@ -211,3 +185,4 @@ body {
 .chat-message:nth-child(even) {
     /* background-color: #f1f1f1; */
 }
+
