--- a/public/assest/css/home.css
+++ b/public/assest/css/home.css
@@ -44,8 +44,9 @@
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    background-color: #000000;
+    background-color: #394167;
     position: fixed;
+
     bottom: 10px;
     right: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -53,8 +54,8 @@
 }
 
 #chatbot-header {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -80,7 +81,7 @@
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #ffffff;
 }
 
 #chatbot-input {
@@ -97,8 +98,8 @@
 }
 
 #chatbot-send {
-    background-color: #007BFF;
-    color: white;
+    background-color: #4e85c0;
+    color: rgb(255, 255, 255);
     border: none;
     padding: 8px 12px;
     margin-left: 10px;
